--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url =  jdbc:mysql://localhost:3306/code?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = hello
+spring.datasource.password = Ani@1999
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 
